[package]
name = "lighthtml"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/lighthtml"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", optional = true }
serde-tuple-vec-map = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "serde-tuple-vec-map"]
